adding finalized version